--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,14 +6,9 @@ spring:
     base-path: /api/v1
   application:
     name: ms-franchise-neg
-  jpa:
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-    generate-ddl: true
-  datasource:
-    url: jdbc:mysql://localhost:3306/test
-    username: root
-    password: 1122q!
-    driver-class-name: com.mysql.cj.jdbc.Driver
+  data:
+    mongodb:
+      uri: ${DB_CONNECTION_STRING}
 
 #Project info
 app:
