--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -92,7 +92,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - BuildContainer
-    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event.pull_request.merged == true)
+    if: (github.ref == 'refs/heads/main' && github.event.pull_request.merged == true)
     steps:
       - name: Validate secrets
         run: |
@@ -109,16 +109,16 @@ jobs:
         with:
           terraform_version: 1.6.0
 
+      - name: Terraform Init
+        working-directory: infra
+        run: terraform init
+
       - name: Check if Terraform files changed
         id: tf-check
         run: |
           git fetch origin ${{ github.event.before }}
           CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "^infra/.*\.tf$" || true)
           echo "changed_tf_files=$CHANGED" >> $GITHUB_OUTPUT
-
-      - name: Terraform Init
-        working-directory: infra
-        run: terraform init
 
       - name: Show changed Terraform files
         if: steps.tf-check.outputs.changed_tf_files != ''
