--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,10 +2,10 @@ name: Java project with Maven
 
 on:
   push:
-    branches: [main, develop, staging]
+    branches: [ main, develop, staging ]
   pull_request:
-    branches: [main, develop, staging]
-    types: [opened, synchronize]
+    branches: [ main, develop, staging ]
+    types: [ opened, synchronize ]
 
 env:
   REGISTRY: ghcr.io
@@ -63,7 +63,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract project version
-        run:  echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+        run: echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -80,7 +80,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}`
 
       - name: Project version compiled
-        run:  echo $PROJECT_VERSION
+        run: echo $PROJECT_VERSION
 
       - name: Set output environment variable
         id: set-output
@@ -92,7 +92,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - BuildContainer
-    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event.pull_request.merged == true)
+    if: github.ref == 'refs/heads/develop' && (github.event_name == 'push' || github.event.pull_request.merged == true)
     steps:
       - name: Validate secrets
         run: |
@@ -109,16 +109,16 @@ jobs:
         with:
           terraform_version: 1.6.0
 
+      - name: Terraform Init
+        working-directory: infra
+        run: terraform init
+
       - name: Check if Terraform files changed
         id: tf-check
         run: |
           git fetch origin ${{ github.event.before }}
           CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "^infra/.*\.tf$" || true)
           echo "changed_tf_files=$CHANGED" >> $GITHUB_OUTPUT
-
-      - name: Terraform Init
-        working-directory: infra
-        run: terraform init
 
       - name: Show changed Terraform files
         if: steps.tf-check.outputs.changed_tf_files != ''
