--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -9,4 +9,7 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8001
+    - protocol: TCP
+      port: 27017
+      targetPort: 27017
   type: LoadBalancer
